@@ -5,7 +5,6 @@ perl              = 5.010001
 namespace::autoclean = 0.19
 namespace::clean  = 0.25
 Cache::FastMmap   = 1.40
-Class::Method::ModifiersX::Augment = 0.001
 Class::Null       = 2.110730
 File::Path        = 2.08
 File::ReadBackwards = 1.05
