@@ -2,7 +2,7 @@ package File::DataClass;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.52.%d', q$Rev: 4 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.52.%d', q$Rev: 5 $ =~ /\d+/gmx );
 
 use Moo;
 
@@ -31,7 +31,7 @@ File::DataClass - Structured data file IO with OO paradigm
 
 =head1 Version
 
-This document describes version v0.52.$Rev: 4 $ of L<File::DataClass>
+This document describes version v0.52.$Rev: 5 $ of L<File::DataClass>
 
 =head1 Synopsis
 
