@@ -6,11 +6,10 @@ use Moo;
 use Class::Null;
 use English                    qw( -no_match_vars );
 use File::Copy;
-use File::DataClass::Constants;
+use File::DataClass::Constants qw( EXCEPTION_CLASS FALSE NUL TRUE );
 use File::DataClass::Functions qw( is_stale merge_file_data throw );
 use File::DataClass::HashMerge;
 use File::DataClass::Types     qw( Object Str );
-use MooX::Augment -class;
 use Scalar::Util               qw( blessed );
 use Try::Tiny;
 use Unexpected::Functions      qw( RecordAlreadyExists PathNotFound
@@ -23,8 +22,8 @@ has 'encoding' => is => 'ro', isa => Str, default => NUL;
 has 'extn'     => is => 'ro', isa => Str, default => NUL;
 
 has 'schema'   => is => 'ro', isa => Object,
-   handles     => { _cache => 'cache', _debug => 'debug', _lock => 'lock',
-                    _log   => 'log',   _perms => 'perms' },
+   handles     => { _cache => 'cache', _lock  => 'lock',
+                    _log   => 'log',   _perms => 'perms', },
    required    => TRUE,  weak_ref => TRUE;
 
 # Private functions
@@ -44,7 +43,7 @@ sub create_or_update {
 
    $self->validate_params( $path, $element ); my $updated;
 
-   my $data = ($self->_read_file( $path, TRUE ))[ 0 ];
+   my $data = ($self->read_file( $path, TRUE ))[ 0 ];
 
    try {
       my $filter = sub { $_get_src_attributes->( $cond, $_[ 0 ] ) };
@@ -58,7 +57,7 @@ sub create_or_update {
    }
    catch { $self->_lock->reset( k => $path ); throw $_ };
 
-   if ($updated) { $self->_write_file( $path, $data, not $updating ) }
+   if ($updated) { $self->write_file( $path, $data, not $updating ) }
    else { $self->_lock->reset( k => $path ) }
 
    return $updated ? $result : FALSE;
@@ -71,12 +70,12 @@ sub delete {
 
    $self->validate_params( $path, $element );
 
-   my $data = ($self->_read_file( $path, TRUE ))[ 0 ]; my $id = $result->id;
+   my $data = ($self->read_file( $path, TRUE ))[ 0 ]; my $id = $result->id;
 
    if (exists $data->{ $element } and exists $data->{ $element }->{ $id }) {
       delete $data->{ $element }->{ $id };
       scalar keys %{ $data->{ $element } } or delete $data->{ $element };
-      $self->_write_file( $path, $data );
+      $self->write_file( $path, $data );
       return TRUE;
    }
 
@@ -89,7 +88,7 @@ sub dump {
 
    return $self->txn_do( $path, sub {
       $self->_lock->set( k => $path );
-      $self->_write_file( $path, $data, TRUE ) } );
+      $self->write_file( $path, $data, TRUE ) } );
 }
 
 sub insert {
@@ -101,7 +100,7 @@ sub insert {
 sub load {
    my ($self, @paths) = @_; $paths[ 0 ] or return {};
 
-   scalar @paths == 1 and return ($self->_read_file( $paths[ 0 ], FALSE ))[ 0 ];
+   scalar @paths == 1 and return ($self->read_file( $paths[ 0 ], FALSE ))[ 0 ];
 
    my ($loaded, $meta, $newest) = $self->_cache->get_by_paths( \@paths );
    my $cache_mtime = $self->meta_unpack( $meta );
@@ -111,7 +110,7 @@ sub load {
    $loaded = {}; $newest = 0;
 
    for my $path (@paths) {
-      my ($red, $path_mtime) = $self->_read_file( $path, FALSE );
+      my ($red, $path_mtime) = $self->read_file( $path, FALSE );
 
       merge_file_data $loaded, $red;
       $path_mtime > $newest and $newest = $path_mtime;
@@ -130,7 +129,36 @@ sub meta_unpack { # Modified in a subclass
 }
 
 sub read_file {
-   return shift->_read_file( @_ );
+   my ($self, $path, $for_update) = @_;
+
+   $self->_lock->set( k => $path ); my ($data, $meta, $path_mtime);
+
+   try {
+      ($data, $meta)  = $self->_cache->get( $path );
+      $path_mtime     = $path->stat->{mtime};
+
+      my $cache_mtime = $self->meta_unpack( $meta );
+
+      if (is_stale $data, $cache_mtime, $path_mtime) {
+         if ($for_update and not $path->exists) { $data = {} }
+         else {
+            $data = $self->read_file_raw( $path->lock ); $path->close;
+            $meta = $self->meta_pack( $path_mtime );
+            $self->_cache->set( $path, $data, $meta );
+            $self->_log->debug( "Read file  ${path}" );
+         }
+      }
+      else { $self->_log->debug( "Read cache ${path}" ) }
+   }
+   catch { $self->_lock->reset( k => $path ); throw $_ };
+
+   $for_update or $self->_lock->reset( k => $path );
+
+   return ($data, $path_mtime);
+}
+
+sub read_file_raw {
+   throw 'Method [_1] not overridden in subclass', [ 'read_file_raw' ];
 }
 
 sub select {
@@ -138,7 +166,7 @@ sub select {
 
    $self->validate_params( $path, $element );
 
-   my $data = ($self->_read_file( $path, FALSE ))[ 0 ];
+   my $data = ($self->read_file( $path, FALSE ))[ 0 ];
 
    return exists $data->{ $element } ? $data->{ $element } : {};
 }
@@ -183,59 +211,33 @@ sub validate_params {
    return;
 }
 
-# Private methods
-sub _read_file {
-   my ($self, $path, $for_update) = @_;
-
-   $self->_lock->set( k => $path ); my ($data, $meta, $path_mtime);
+sub write_file {
+   my ($self, $path, $data, $create) = @_; my $exists = $path->exists;
 
    try {
-      ($data, $meta)  = $self->_cache->get( $path );
-      $path_mtime     = $path->stat->{mtime};
+      $create or $exists or throw PathNotFound, [ $path ];
+      $exists or $path->perms( $self->_perms );
 
-      my $cache_mtime = $self->meta_unpack( $meta );
-
-      if (is_stale $data, $cache_mtime, $path_mtime) {
-         if ($for_update and not $path->exists) { $data = {} }
-         else {
-            $data = inner( $path->lock ); $path->close;
-            $meta = $self->meta_pack( $path_mtime );
-            $self->_cache->set( $path, $data, $meta );
-            $self->_debug and $self->_log->debug( "Read file  ${path}" );
-         }
-      }
-      else { $self->_debug and $self->_log->debug( "Read cache ${path}" ) }
-   }
-   catch { $self->_lock->reset( k => $path ); throw $_ };
-
-   $for_update or $self->_lock->reset( k => $path );
-
-   return ($data, $path_mtime);
-}
-
-sub _write_file {
-   my ($self, $path, $data, $create) = @_;
-
-   try {
-      $create or $path->exists or throw PathNotFound, [ $path ];
-
-      $path->exists or $path->perms( $self->_perms );
-
-      if ($self->backup and $path->exists and not $path->empty) {
+      if ($exists and $self->backup and not $path->empty) {
          copy( "${path}", $path.$self->backup )
             or throw 'Backup copy failed: [_1]', [ $OS_ERROR ];
       }
 
-      try   { $data = inner( $path->atomic->lock, $data ); $path->close }
+      try   { $data = $self->write_file_raw( $path->atomic->lock, $data );
+              $path->close }
       catch { $path->delete; throw $_ };
 
       $self->_cache->remove( $path );
-      $self->_debug and $self->_log->debug( "Write file ${path}" )
+      $self->_log->debug( "Write file ${path}" )
    }
    catch { $self->_lock->reset( k => $path ); throw $_ };
 
    $self->_lock->reset( k => $path );
    return $data;
+}
+
+sub write_file_raw {
+   throw 'Method [_1] not overridden in subclass', [ 'write_file_raw' ];
 }
 
 1;
@@ -327,6 +329,12 @@ it returns. Paths are instances of L<File::DataClass::IO>
 
 Read a file from cache or disk
 
+=head2 read_file_raw
+
+   $data = $self->read_file_raw( $read_file_handle );
+
+Should be overridden in the subclass
+
 =head2 select
 
    $hash_ref = $storage->select( $path );
@@ -346,6 +354,23 @@ Updates the specified element object returning true if successful. Throws
 an error otherwise. Path is an instance of L<File::DataClass::IO>
 
 =head2 validate_params
+
+   $storage->validate_params( $path, $element );
+
+Throw if C<$path> or C<$element> are not specified or C<$path> is not blessed
+
+=head2 write_file
+
+   $data = $self->write_file( $path, $data, $create );
+
+Writes C<$data> to C<$path>. Will throw if C<$create> is not true and C<$path>
+does not exist
+
+=head2 write_file_raw
+
+   $data = $self->write_file_raw( $write_file_handle, $data );
+
+Should be overridden in the subclass
 
 =head1 Diagnostics
 
